--- a/index.ipynb
+++ b/index.ipynb
@@ -4,7 +4,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[howto](how_to_handle_periods.ipynb)"
+    " <img src=\"http://www.openfisca.fr/hotlinks/logo-openfisca.svg\" width=\"298\" align=\"right\">\n",
+    "<center>\n",
+    "<b>\n",
+    "<i>\n",
+    "<font size = '8' color = 'grey'>\n",
+    "<br />\n",
+    "<br />\n",
+    "Getting Started <br /> <br />\n",
+    "with OpenFisca\n",
+    "</font>\n",
+    "</i>\n",
+    "</b>\n",
+    "\n",
+    "\n",
+    "</center>\n",
+    "<br />\n",
+    "<br />\n",
+    "<br />\n",
+    "<br />\n",
+    "\n",
+    "<center>\n",
+    "[OpenFisca](https://www.openfisca.fr/) is an open micro-simulator of the tax-benefit system.   \n",
+    "It allows users to calculate many social benefits and taxes paid by households   \n",
+    "and to simulate the impact of reforms on their budget. \n",
+    "</center>\n",
+    "<br />\n",
+    "<br />\n",
+    "Here we offer you an environnment to discover OpenFisca thanks to Jupyter Notebook.  \n",
+    "You will find tutorials and blank notebooks to dive in this software.\n",
+    "\n",
+    "For further information please see the [documentation website](https://doc.openfisca.fr/en/index.html).\n",
+    "### Tutorials\n",
+    "\n",
+    "- [Getting Started](getting_started.ipynb)\n",
+    "- [How to handle periods](how_to_handle_periods.ipynb)\n",
+    "\n",
+    "### Let's exercise\n",
+    "\n",
+    "- [Blank Notebook](playground.ipynb)"
    ]
   }
  ],
