--- a/index.ipynb
+++ b/index.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "### Let's exercise\n",
     "\n",
-    "- [Blank Notebook](playground.ipynb)"
+    "- [Blank Notebook](blank.ipynb)"
    ]
   }
  ],
