--- a/index.ipynb
+++ b/index.ipynb
@@ -39,6 +39,7 @@
     "\n",
     "- [Getting Started](getting_started.ipynb)\n",
     "- [How to handle periods](how_to_handle_periods.ipynb)\n",
+    "- [How to handle axes](how_to_handle_axes.ipynb)\n : making variable definition evolve in a range",
     "\n",
     "### Let's exercise\n",
     "\n",
