--- a/index.ipynb
+++ b/index.ipynb
@@ -39,8 +39,7 @@
     "\n",
     "- [Getting Started](getting_started.ipynb)\n",
     "- [How to handle periods](how_to_handle_periods.ipynb)\n",
-    "- [How to handle axes](how_to_handle_axes.ipynb)\n : making variable definition evolve in a range",
-    "\n",
+    "- [How to handle axes](how_to_handle_axes.ipynb) : making variable definition evolve in a definite range. Illustrated with the Income Tax\n",
     "### Let's exercise\n",
     "\n",
     "- [Blank Notebook](blank.ipynb)"
