--- a/index.ipynb
+++ b/index.ipynb
@@ -39,11 +39,12 @@
     "\n",
     "- [Getting Started](getting_started.ipynb)\n",
     "- [How to handle periods](how_to_handle_periods.ipynb)\n",
-    "- [How to handle axes](how_to_handle_axes.ipynb) : making variable definition evolve in a definite range. Illustrated with the Income Tax\n",
+    "- [How to handle axes](how_to_handle_axes.ipynb)    \n",
+    "*Making definition variables evolve in a given range. Illustrated with the Income Tax*\n",
     "\n",
     "### Let's exercise\n",
     "\n",
-    "- [Blank Notebook](blank.ipynb)"
+    "- [Blank Notebook](playground.ipynb)"
    ]
   }
  ],
