--- a/notebooks/getting_started.ipynb
+++ b/notebooks/getting_started.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -98,10 +98,10 @@
     {
      "data": {
       "text/plain": [
-       "<openfisca_france.scenarios.Scenario at 0x7f0bb50eb290>"
+       "<openfisca_france.scenarios.Scenario at 0x7f889008e090>"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -155,10 +155,10 @@
     {
      "data": {
       "text/plain": [
-       "array([ 129.99000549], dtype=float32)"
+       "array([129.99], dtype=float32)"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -253,18 +253,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/benjello/openfisca/openfisca-core/openfisca_core/parameters.py:572: FutureWarning: Conversion of the second argument of issubdtype from `str` to `str` is deprecated. In future, it will be treated as `np.string_ == np.dtype(str).type`.\n",
+      "  if not np.issubdtype(key.dtype, np.str):\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([ 15614.34863281], dtype=float32)"
+       "array([13554.031], dtype=float32)"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +285,7 @@
     "reform_simulation = reform_scenario.new_simulation() \n",
     "\n",
     "# Choose the variable you want to calcul : here the disposable income, \"revdisp\"\n",
-    "reform_simulation.calculate('revdisp', '2013')"
+    "reform_simulation.calculate('revenu_disponible', '2013')"
    ]
   },
   {
@@ -289,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -297,10 +305,10 @@
     {
      "data": {
       "text/plain": [
-       "array([ 36039.1875], dtype=float32)"
+       "array([33978.87], dtype=float32)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,42 +321,12 @@
     "reference_simulation = reference_scenario.new_simulation()\n",
     "\n",
     "# Choose the variable you want to calcul\n",
-    "reference_simulation.calculate('revdisp', '2013')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Trace the calculation of a variable\n",
-    "\n",
-    "Thanks to the Trace tool you can see all the details of the variable calculation depending on the scenario you made."
+    "reference_simulation.calculate('revenu_disponible', '2013')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://www.openfisca.fr/tools/trace?api_url=http%3A%2F%2Fapi.openfisca.fr&simulation=%7B%22scenarios%22%3A+%5B%7B%22period%22%3A+%222015%22%2C+%22test_case%22%3A+%7B%22familles%22%3A+%5B%7B%22id%22%3A+0%2C+%22parents%22%3A+%5B%22ind0%22%5D%2C+%22enfants%22%3A+%5B%22ind2%22%2C+%22ind3%22%5D%7D%5D%2C+%22foyers_fiscaux%22%3A+%5B%7B%22id%22%3A+0%2C+%22declarants%22%3A+%5B%22ind0%22%5D%2C+%22personnes_a_charge%22%3A+%5B%22ind2%22%2C+%22ind3%22%5D%7D%5D%2C+%22individus%22%3A+%5B%7B%22id%22%3A+%22ind0%22%2C+%22age%22%3A+30%2C+%22salaire_de_base%22%3A+20000.0%7D%2C+%7B%22id%22%3A+%22ind2%22%2C+%22age%22%3A+12%7D%2C+%7B%22id%22%3A+%22ind3%22%2C+%22age%22%3A+18%7D%5D%2C+%22menages%22%3A+%5B%7B%22id%22%3A+0%2C+%22personne_de_reference%22%3A+%22ind0%22%2C+%22enfants%22%3A+%5B%22ind2%22%2C+%22ind3%22%5D%7D%5D%7D%7D%5D%2C+%22variables%22%3A+%5B%22irpp%22%5D%7D\n"
-     ]
-    }
-   ],
-   "source": [
-    "from openfisca_core import tools\n",
-    "print(tools.get_trace_tool_link(scenario, variables = ['irpp'], api_url = 'http://api.openfisca.fr', trace_tool_url =  'http://www.openfisca.fr/tools/trace'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -370,6 +348,15 @@
     "%%javascript\n",
     "$.getScript('https://kmahelona.github.io/ipython_notebook_goodies/ipython_notebook_toc.js')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -388,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
