--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <img src=\"http://www.openfisca.fr/hotlinks/logo-openfisca.svg\" width=\"298\" align=\"right\">\n",
+    " <img src=\"https://openfisca.org/img/logo-openfisca.svg\" width=\"298\" align=\"right\">\n",
     "<center>\n",
     "<b>\n",
     "<i>\n",
@@ -25,7 +25,7 @@
     "<br />\n",
     "\n",
     "<center>\n",
-    "[OpenFisca](https://www.openfisca.fr/) is an open micro-simulator of the tax-benefit system.   \n",
+    "<a href=\"https://openfisca.org/\">OpenFisca</a> is an open micro-simulator of the tax-benefit system.   \n",
     "It allows users to calculate many social benefits and taxes paid by households   \n",
     "and to simulate the impact of reforms on their budget. \n",
     "</center>\n",
@@ -34,7 +34,7 @@
     "Here we offer you an environnment to discover OpenFisca thanks to Jupyter Notebook.  \n",
     "You will find tutorials and blank notebooks to dive in this software.\n",
     "\n",
-    "For further information please see the [documentation website](https://doc.openfisca.fr/en/index.html).\n",
+    "For further information please see the [documentation website](https://openfisca.org/doc/).\n",
     "### Tutorials\n",
     "\n",
     "- [Getting Started](getting_started.ipynb)\n",
@@ -44,27 +44,28 @@
     "\n",
     "### Let's exercise\n",
     "\n",
-    "- [Blank Notebook](playground.ipynb)"
+    "- [Blank Notebook](blank.ipynb)"
    ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
