--- a/notebooks/getting_started.ipynb
+++ b/notebooks/getting_started.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"http://www.openfisca.fr/hotlinks/logo-openfisca.svg\" width=\"198\" align=\"right\">\n",
+    "<img src=\"https://openfisca.org/img/logo-openfisca.svg\" width=\"198\" align=\"right\">\n",
     "<h1 id=\"tocheading\">Getting Started</h1>\n",
     "\n",
-    "This notebook illustrates the [key concepts](https://doc.openfisca.fr/en/key-concepts.html) of OpenFisca that you will find in the documentation."
+    "This notebook illustrates the [key concepts](https://openfisca.org/doc/key-concepts/index.html) of OpenFisca that you will find in the documentation."
    ]
   },
   {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,12 +45,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Initialize the french [Tax and Benefit system](https://doc.openfisca.fr/en/tax_and_benefit_system.html) : it launches the entire legislation."
+    "Initialize the french [Tax and Benefit system](https://openfisca.org/doc/key-concepts/tax_and_benefit_system.html) : it launches the entire legislation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,15 +61,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a [scenario](https://doc.openfisca.fr/en/input_data.html#scenario): first step to give a familial situation for which you want to calculate taxes or benefits."
+    "Create a [scenario](https://openfisca.org/doc/key-concepts/input_data.html#scenario): first step to give a familial situation for which you want to calculate taxes or benefits."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "scenario = tax_benefit_system.new_scenario()"
@@ -85,16 +83,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<openfisca_france.scenarios.Scenario at 0x10d1e9b00>"
+       "<openfisca_france.scenarios.Scenario at 0x7f77d1512e50>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,12 +115,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a [simulation](https://doc.openfisca.fr/en/simulation.html#simulation--the-framework-of-computation): the OpenFisca frame for calculating taxes or benefits."
+    "Create a [simulation](https://openfisca.org/doc/key-concepts/simulation.html#simulation-the-framework-of-computation): the OpenFisca frame for calculating taxes or benefits."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +145,7 @@
        "array([129.99], dtype=float32)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*An reform represents a modified version of the real Tax and Benefit legislation* \n",
+    "A reform represents a modified version of the real Tax and Benefit legislation* \n",
     "\n",
     "Reforms are gather in the module [`Reform`](https://github.com/openfisca/openfisca-france/tree/master/openfisca_france/reforms) of OpenFisca.\n",
     "\n",
@@ -180,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +243,7 @@
        "array([13554.031], dtype=float32)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +277,7 @@
        "array([33978.87], dtype=float32)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,43 +294,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Trace the calculation of a variable\n",
-    "\n",
-    "Thanks to the Trace tool you can see all the details of the variable calculation depending on the scenario you made."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'urllib' has no attribute 'urlencode'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-c809734e760c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mopenfisca_core\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtools\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m print(tools.get_trace_tool_link(scenario, variables = ['irpp'],\n\u001b[0;32m----> 3\u001b[0;31m                                 api_url = 'http://api.openfisca.fr', trace_tool_url =  'http://www.openfisca.fr/tools/trace'))\n\u001b[0m",
-      "\u001b[0;32m~/.local/share/virtualenvs/Python_3_7_0/lib/python3.7/site-packages/openfisca_core/tools/__init__.py\u001b[0m in \u001b[0;36mget_trace_tool_link\u001b[0;34m(scenario, variables, api_url, trace_tool_url)\u001b[0m\n\u001b[1;32m     75\u001b[0m         \u001b[0;34m'variables'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mvariables\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     76\u001b[0m         }\n\u001b[0;32m---> 77\u001b[0;31m     url = trace_tool_url + '?' + urllib.urlencode({\n\u001b[0m\u001b[1;32m     78\u001b[0m         \u001b[0;34m'simulation'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdumps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msimulation_json\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     79\u001b[0m         \u001b[0;34m'api_url'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mapi_url\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'urllib' has no attribute 'urlencode'"
-     ]
-    }
-   ],
-   "source": [
-    "from openfisca_core import tools\n",
-    "print(tools.get_trace_tool_link(scenario, variables = ['irpp'],\n",
-    "                                api_url = 'http://api.openfisca.fr', trace_tool_url =  'http://www.openfisca.fr/tools/trace'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
