--- a/notebooks/getting_started.ipynb
+++ b/notebooks/getting_started.ipynb
@@ -98,7 +98,7 @@
     {
      "data": {
       "text/plain": [
-       "<openfisca_france.scenarios.Scenario at 0x7f889008e090>"
+       "<openfisca_france.scenarios.Scenario at 0x7f291a7cea90>"
       ]
      },
      "execution_count": 4,
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -348,15 +348,6 @@
     "%%javascript\n",
     "$.getScript('https://kmahelona.github.io/ipython_notebook_goodies/ipython_notebook_toc.js')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -375,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.14+"
   }
  },
  "nbformat": 4,
