Start fixing notebooks syntaxes

--- a/notebooks/getting_started.ipynb
+++ b/notebooks/getting_started.ipynb
@@ -35,9 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from openfisca_france import FranceTaxBenefitSystem"
@@ -53,9 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tax_benefit_system = FranceTaxBenefitSystem()"
@@ -72,7 +68,6 @@
    "cell_type": "code",
    "execution_count": 81,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [],
@@ -91,9 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -148,9 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -192,9 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from openfisca_france.reforms import landais_piketty_saez"
@@ -210,9 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "reform = landais_piketty_saez.landais_piketty_saez(tax_benefit_system)"
@@ -254,9 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -276,8 +261,8 @@
     "#Simulate the reform\n",
     "reform_simulation = reform_scenario.new_simulation() \n",
     "\n",
-    "# Choose the variable you want to calcul : here the disposable income, \"revdisp\"\n",
-    "reform_simulation.calculate('revdisp', '2013')"
+    "# Choose the variable you want to calcul : here the disposable income, \"revenu_disponible\"\n",
+    "reform_simulation.calculate('revenu_disponible', '2013')"
    ]
   },
   {
@@ -290,9 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -313,7 +296,7 @@
     "reference_simulation = reference_scenario.new_simulation()\n",
     "\n",
     "# Choose the variable you want to calcul\n",
-    "reference_simulation.calculate('revdisp', '2013')"
+    "reference_simulation.calculate('revenu_disponible', '2013')"
    ]
   },
   {
@@ -329,7 +312,6 @@
    "cell_type": "code",
    "execution_count": 90,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -349,9 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -374,23 +354,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
