--- a/notebooks/getting_started.ipynb
+++ b/notebooks/getting_started.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,16 +83,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<openfisca_france.scenarios.Scenario at 0x7f77d1512e50>"
+       "<openfisca_france.scenarios.Scenario at 0x7f9e62bd6810>"
       ]
      },
-     "execution_count": null,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,12 +131,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calculate a variable : `\"af\"` (allocations familiales) for example."
+    "Calculate a variable : `af` (allocations familiales) for example."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "array([129.99], dtype=float32)"
       ]
      },
-     "execution_count": null,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -243,13 +243,13 @@
        "array([13554.031], dtype=float32)"
       ]
      },
-     "execution_count": null,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Indicate that you want to perfom the reform on this scenario\n",
+    "# Indicate that you want to perfom the reform on this scenario\n",
     "reform_scenario = init_profile(reform.new_scenario())\n",
     "\n",
     "#Simulate the reform\n",
@@ -263,39 +263,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Without the reform: the counterfactual"
+    "Without the reform: the baseline (counterfactual)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([33978.87], dtype=float32)"
+       "array([33979.367], dtype=float32)"
       ]
      },
-     "execution_count": null,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Indicate that you want to perfom the standard system on this scenario\n",
-    "reference_scenario = init_profile(tax_benefit_system.new_scenario())\n",
+    "# Indicate that you want to perfom the standard system on this scenario\n",
+    "baseline_scenario = init_profile(tax_benefit_system.new_scenario())\n",
     "\n",
-    "#Simulate the standard scenario\n",
-    "reference_simulation = reference_scenario.new_simulation()\n",
+    "# Simulate the standard scenario\n",
+    "baseline_simulation = baseline_scenario.new_simulation()\n",
     "\n",
     "# Choose the variable you want to calcul\n",
-    "reference_simulation.calculate('revenu_disponible', '2013')"
+    "baseline_simulation.calculate('revenu_disponible', '2013')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -326,23 +326,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15+"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
